# Flint

./: ''  .clang-format  .gitignore  @ONLY  CMakeLists.txt  Doxyfile  FindOpenCL.cmake  IDEAS.md  LICENCE  LICENSE  Makefile  README.md  TODO.md  \  compile_commands.json  core.hpp  example.flint  flint.h  flint.hpp  flintConfig.cmake  flintConfigVersion.cmake  flint_1.hpp  flint_generic.hpp  flint_helper.hpp  flint_n.hpp  flint_nn.h  gpubackend.hpp  logger.hpp  main  main.cpp  test2  troubleshooting.md
.github/workflows/: c-cpp.yml  pages.yml  static.yml
dl/: CMakeLists.txt  README.md  activations.hpp  flint_dl.hpp  initializer.hpp  layers.hpp  losses.hpp  models.hpp  optimizers.hpp  trainer.hpp
dl/datasets/: mnist.go
dl/layers/: attention.hpp  connected.hpp  convolution.hpp  normalization.hpp  reshaping.hpp
dl/src/: optimizers.cpp
dl/visualization/: README.md  connector.js  index.html  style.css
docs/: .gitignore  Makefile  README.md  c_doc.ahtml  c_doc.html  dl.ahtml  dl.html  dl_layers.ahtml  dl_layers.html  dl_models.ahtml  dl_models.html  dl_optimizers.ahtml  dl_optimizers.html  documentation.ahtml  documentation.html  flint_hpp.ahtml  flint_hpp.ahtml_typename_T__unsigned_int_n__struct_Tehtml  flint_hpp.html  flint_tensor_1.ahtml  flint_tensor_1.html  flint_tensor_n.ahtml  flint_tensor_n.html  footer.html  general_doc.ahtml  general_doc.html  header.html  index.ahtml  index.html  layout.xml  mainpage.md  style.css  tutorial.ahtml  tutorial.html
docs/generator/: .gitignore  CPPParser.hs  HtmlParser.hs  SideGenerator.hs
docs/source/: conf.py
docs/source/c_api/: functions.rst  index.rst  structs.rst
examples/: .gitignore  CMakeLists.txt  README.md  dl_test.cpp  gauss  gauss.cpp
examples/basic/: conv.c
examples/convC/: .gitignore
examples/dl_test_1/: dl_test.cpp
examples/dl_test_2/: mnist.cpp
examples/gauss/: gauss.c  gauss.cpp
examples/matmulC/: .gitignore  matmul.c
examples/mnist/: .gitignore  download.sh  download_data.sh  mnist.cpp  mnist_test  mnist_test.cpp  mnist_train  mnist_train.cpp  test.py
examples/mnist_train/: mnist_train
examples/resnet/: .gitignore  download_data.sh  imgnet_labels.h  resnet  resnet.cpp
go/: .gitignore  DEVELOPMENT.md  README.md  flint.go  go.mod  go.sum  graph.go  image.go  logger.go  scratch.go  tensor.go
go/dataloader/: dataloader.go  dataloader_test.go  functions.go  queue.go  queue_test.go  sample_functions.go  sample_functions_test.go
go/datasets/: README.md  datasets.go  fake.go  fake_test.go  mnist.go  mnist_test.go
go/dl/: layers.go  tensor.go
go/dl/layers/: README.md  dropout.go  flatten.go  fully_connected.go  identity.go  layers.go  log_softmax.go  relu.go  relu_test.go  sequential.go  sigmoid.go  sigmoid_test.go  softmax.go  softmax_test.go  tensor.go
go/dl/loss/: cross_entropy.go  cross_entropy_test.go  losses.go
go/dl/losses/: README.md  cross_entropy.go  cross_entropy_test.go  losses.go  mse.go  mse_test.go  nll.go
go/dl/models/: README.md  lenet5.go
go/dl/optim/: optimizer.go  regularizer.go  scheduler.go  sgd.go  sgd_test.go  stepLR.go
go/dl/optimize/: README.md  optimize.go  optimizer.go  regularizer.go  scheduler.go  sgd.go  sgd_test.go  stepLR.go
go/docs/: README.md  doc.go
go/examples/: .gitignore  addition.go  gauss.go  main.go
go/examples/gauss/: .gitignore  (+3 more)
go/flint/: add.go  add_test.go  aggregation.go  arithmetic.go  arithmetic_test.go  collate.go  convert.go  create.go  create_helpers.go  create_test.go  error.go  export_test.go  flint.cc  flint.go  graph.go  graph_test.go  images.go  images_test.go  indexing.go  linalg.go  log.go  logger.go  memory_execution.go  memory_execution_test.go  operations.go  operations_test.go  parameter.go  setup.go  sign.go  tensor.go  tensor_test.go  transformations.go  trig.go  types.go  utils.go  x.go
go/flint_old/: create.go  create_test.go  export_test.go  operations.go  operations_test.go  parameter.go  tensor.go  tensor_test.go
go/scripts/: doc.go  generate_doc.go
go/tensor/: create.go  create_test.go  export_test.go  operations.go  operations_test.go  parameter.go  tensor.go  tensor_test.go
go/wrapper/: error.go  execution.go  flint.cc  gradients.go  graph.go  graph_test.go  images.go  images_test.go  logger.go  memory.go  memory_execution.go  memory_test.go  numeric.go  operations.go  operations_test.go  serialization.go  setup.go  shape.go  types.go  utils.go
onnx/: .gitignore  Makefile  model.cpp  model.hpp  onnx.proto3.pb.cc  onnx.proto3.pb.h  onnx_model.cpp  onnx_model.hpp  onnx_test  test.cpp
onnx/layers/: activations.cpp  arithmetics.cpp  convolutions.cpp  layers.hpp  modifications.cpp  normalization.cpp
opencl/: basic_math.cl
src/: cpuimpl.cpp  cputhunk.cpp  cputhunk.hpp  eager_kernels.h  errors.hpp  executor.cpp  file_io.cpp  gradient.cpp  gradients.cpp  graph.cpp  kernel_tree.hpp  logger.cpp  logger.hpp  ocl_codegen.hpp  ocl_comp.cpp  ocl_comp.hpp  ocl_compthread.cpp  ocl_compthread.hpp  ocl_params.hpp  oclcomp.cpp  oclcomp.hpp  oclimpl.cpp  utils.hpp
src/backend_cpu/: cpu_common.hpp  cpuimpl.cpp  execution.hpp
src/backend_ocl/: README.md  codegen.hpp  codegen_eager.cpp  codegen_lazy.cpp  comp.cpp  comp.hpp  oclimpl.cpp  params.hpp  twine.hpp  utils.hpp
src/dl/: compile_onnx.sh  flint_dl.hpp  layers.hpp  model.cpp  model.hpp  onnx.proto3.pb.cpp  onnx.proto3.pb.h  trainer.hpp
src/libs/: stb_image.hpp  stb_image_write.hpp
src/onnx/: layers.hpp  model.cpp  model.hpp
src/operations/: README.md  binary_arithmetic.cpp  binary_arithmetic.hpp  comparison.cpp  comparison.hpp  convolution.cpp  convolution.hpp  gen_data.cpp  gen_data.hpp  implementation.cpp  implementation.hpp  index_modification.cpp  index_modification.hpp  pooling.cpp  pooling.hpp  reductions.cpp  reductions.hpp  shape_modification.cpp  shape_modification.hpp  simple_arithmetic.cpp  simple_arithmetic.hpp  sliding_windows.cpp  sliding_windows.hpp  unary_arithmetic.cpp  unary_arithmetic.hpp
test/: benchmark  benchmark.cpp  doctest.h  grad_test_cases.hpp  test.cpp  test_gradients.cpp  testutils.hpp
visualization/: connector.js
(+15 files in other folders)
